correct relative paths in posts

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,6 +16,9 @@ DefaultContentLanguage = "en"
 # config/_default/menus/menu.xx.toml
 
 [taxonomies]
-category = "categories"
-tag = "tags"
-series = "series"
+  category = "categories"
+  tag = "tags"
+  series = "series"
+
+[permalinks]
+  post = ":title"
