--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -7,6 +7,7 @@ title = "Virtually Potato"
 paginate = 10
 theme = "hugo-clarity"
 disqusShortname = ""
+enableEmoji = true
 
 DefaultContentLanguage = "en"
 # [languages]
