--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -1,11 +1,11 @@
 [[main]]
-  name = "Home"
+  name = "Virtually Potato"
   url = ""
   weight = -110
 
 [[main]]
   name = "Archives"
-  url = "post/rich-content/"
+  url = "archives/"
   weight = -109
 
 # Submenus are done this way: parent -> identifier
