--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,9 +9,6 @@ introDescription = "Wrangler of imaginary computers."
 # Google analytics Id
 # ga_analytics = "UA-183355934-1"
 
-# Baidu analytics Id
-# baidu_analytics = "XXXXXXXX"
-
 # limit the number of taxonomies links shown on the sidebar of each page by default.
 numberOfTagsShown = 14 # Applies for all other default & custom taxonomies. e.g categories, brands see https://gohugo.io/content-management/taxonomies#what-is-a-taxonomy
 
@@ -25,7 +22,7 @@ usePageBundles = false
 fallBackOgImage = "images/thumbnail.png"
 
 # sets the maximum number of lines per codeblock. The codeblock will however be scrollable and expandable.
-codeMaxLines = 7
+codeMaxLines = 10
 
 # disable showing line numbers by default. Switch to `true` if you'd rather have them on.
 codeLineNumbers = false
@@ -39,7 +36,7 @@ mainSections = ["posts"] # see config details here https://gohugo.io/functions/w
 # center logo on navbar
 centerLogo = false # Set to "true" for centering or "false" for left aligned.
 
-logo = "logos/potato_32.png"
+logo = "logos/logo.png"
 
 # Label Non inline images on an article body
 figurePositionShow = false # toggle on or off globally
@@ -50,19 +47,13 @@ figurePositionLabel = "Figure" # the text before image number e.g Figure 1.0
 mobileNavigation = "left" # if you prefer right change to 'right'
 
 # some site owners want to decide how they would like their sites to be introduced users. These settings give you as a site owner to decide how the user will view your site for the first time.
-
 # please note that you cannot enforce both modes at the same time. i.e by enforcing one mode, you priotise it over the other (by setting it to true). enforceDarkMode will be commented out
-
 # please also not that mode toggle UI will remain in place. That way, if a user prefers darkmode, they can have their way.
-
 enforceLightMode = false
 enforceDarkMode = true
 
 # customize footer icon. see issue https://github.com/chipzoller/hugo-clarity/issues/77
-footerLogo = "logos/potato_32.png"
-
-# Text for the languages menu.
-languageMenuName = "🌐"
+footerLogo = "logos/logo.png"
 
 # Title separator, default to |.
 titleSeparator = "-"
@@ -95,18 +86,6 @@ iconsDir = "images/icons/" # without a leading forward slash
 [author]
 name = "John Bowdre"
 photo = "images/bio-photo.jpg" #include this if you would like to show the author photo on the sidebar
-
-[plausible_analytics]
-enable = false # to enable plausible analytics set to true.
-websiteDomain = "example.com" # domain name of your website, most cases same as your base url
-# plausibleDomain = "plausible.io" # default is set to plausible.io, only required if plausible is selfhosted
-# scritpName = "plausible" # default is set to plausible, only required if using a custome name for script
-
-[matomo_analytics]
-enable = false # To enable matomo analytics change to `true`.
-websiteDomain = "example.com" # Set the domain name of your website, in most cases same as your base URL this is required.
-matomoDomain = "matomo.example.com" # Set to Matomo domain
-matomoSiteID = "1" # Default is set to 1, change this to the siteid being tracked
 
 [utterances]
   repo="jbowdre/jbowdre.github.io" # owner/repo where github comments will happen
