implement TableOfContents in sidebar for posts with more than 400 words

--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -15,3 +15,7 @@
     noClasses = false
     # style = "monokai"
     tabWidth = 2
+[tableOfContents]
+  endlevel = 6
+  ordered = false
+  startLevel = 3
