--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -81,6 +81,7 @@ iconsDir = "images/icons/" # without a leading forward slash
 # Show related content at the end of an article based on the 'series' taxonomy. Can be set in post front matter.
 # showRelatedInArticle = false
 # showRelatedInSidebar = false
+toc = true
 
 # website author
 [author]
