--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -89,6 +89,6 @@ name = "John Bowdre"
 photo = "images/bio-photo.jpg" #include this if you would like to show the author photo on the sidebar
 
 [utterances]
-  repo="jbowdre/jbowdre.github.io" # owner/repo where github comments will happen
+  repo="jbowdre/virtuallypotato" # owner/repo where github comments will happen
   issueterm="title" # how will the issues be mapped to the articles
   theme="icy-dark" # theme to be applied to comments box
