set a limit for how many related series posts should be displayed

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -63,6 +63,7 @@ comments = true
 
 # Maximum number of recent posts.
 numberOfRecentPosts = 6
+numberOfRelatedPosts = 6
 
 # Maximum number of featured posts.
 numberOfFeaturedPosts = 4
