--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,94 +1,42 @@
+## Metadata
 twitter = "@johndotbowdre"
-largeTwitterCard = false # set to true if you want to show a large twitter card image. The default is a small twitter card image
+largeTwitterCard = true 
 introDescription = "Wrangler of imaginary computers."
-# introURL = "about/" # set the url for the 'read more' button below the introDescription, or set to false to not show the button
-# description = "" # set your site's description here. will be use for home page content meta tags (seo). Alternatively set this description in your homepage content file i.e content/_index.md. Whatever is set in the latter will take precedence
-
-# showShare = false # Uncomment to not show share buttons on each post. Also available in each post's front matter.
-
-# Google analytics Id
-# ga_analytics = "UA-183355934-1"
-
-# limit the number of taxonomies links shown on the sidebar of each page by default.
-numberOfTagsShown = 10 # Applies for all other default & custom taxonomies. e.g categories, brands see https://gohugo.io/content-management/taxonomies#what-is-a-taxonomy
-
-# Whether to default to storing images and other assets in the `static` directory, or use Hugo page bundles.
-# Switch to `true` if you'd like to group assets with the post itself (as a "leaf bundle").
-# This can be overridden at the page level; what is set below acts as the default if no page variable is set.
-# Details on page bundles: https://gohugo.io/content-management/page-bundles/#leaf-bundles
-usePageBundles = false
-
-# will be used on share >> twitter, facebook, linkedin
-fallBackOgImage = "images/thumbnail.png"
-
-# sets the maximum number of lines per codeblock. The codeblock will however be scrollable and expandable.
-codeMaxLines = 10
-
-# disable showing line numbers by default. Switch to `true` if you'd rather have them on.
-codeLineNumbers = false
-
-# enable math notation. Switch to `true` to enable mathjax in your site.
-enableMathNotation = false
-
-# directory(s) where your articles are located
-mainSections = ["posts"] # see config details here https://gohugo.io/functions/where/#mainsections
-
-# center logo on navbar
-centerLogo = false # Set to "true" for centering or "false" for left aligned.
-
-logo = "logos/logo.png"
-
-# Label Non inline images on an article body
-figurePositionShow = false # toggle on or off globally
-# you can toggle this behaviour on or off on per page using the same variable inside your articles frontmatter
-figurePositionLabel = "Figure" # the text before image number e.g Figure 1.0
-
-# Set the collapsed mobile navigation to either appear from the left or the right
-mobileNavigation = "right" # if you prefer right change to 'right'
-
-# some site owners want to decide how they would like their sites to be introduced users. These settings give you as a site owner to decide how the user will view your site for the first time.
-# please note that you cannot enforce both modes at the same time. i.e by enforcing one mode, you priotise it over the other (by setting it to true). enforceDarkMode will be commented out
-# please also not that mode toggle UI will remain in place. That way, if a user prefers darkmode, they can have their way.
-enforceLightMode = false
-enforceDarkMode = true
-
-# customize footer icon. see issue https://github.com/chipzoller/hugo-clarity/issues/77
-footerLogo = "logos/logo_footer.png"
-
-# Title separator, default to |.
-titleSeparator = "-"
-
-# Enable or disable comments globally. Default to true.
-comments = true
-
-# Maximum number of recent posts.
-numberOfRecentPosts = 6
-numberOfRelatedPosts = 6
-
-# Maximum number of featured posts.
-numberOfFeaturedPosts = 4
-
-# Date format. Checkout https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference for details.
-# dateFormat = "2006-01-02" # Default to "Jan 2, 2006".
-# customFonts = false # toggle to true if you want to use custom fonts only.
-
-# The year when ths website was created, this value is used in the copyright
-# notice of the footer.
+description = "I am no vExpert but I can generally fumble through a project and make it work. Here I share how I did it: my adventures with VMware vRealize Automation, cloud and automation projects I'm working on, linux and Powershell scripts I've cobbled together, and other tech tips and tricks."
 since = 2018
 
-# tell hugo where you store your icons e.g favicons. This is useful if you're using an apache server and there are conflicts >> see issue https://github.com/chipzoller/hugo-clarity/issues/74. If this is applicable to you, be sure to copy the contents of https://github.com/chipzoller/hugo-clarity/tree/master/static/icons to your preferred icons directory
-iconsDir = "images/icons/" # without a leading forward slash
+## Logos & icons
+fallBackOgImage = "logos/thumbnail.png"
+iconsDir = "images/icons/"
+centerLogo = false
+logo = "logos/logo.png"
+footerLogo = "logos/logo_footer.png"
 
-# Show related content at the end of an article based on the 'series' taxonomy. Can be set in post front matter.
-# showRelatedInArticle = false
-# showRelatedInSidebar = false
+
+## Site preferences
+numberOfTagsShown = 10 
+codeMaxLines = 10
+codeLineNumbers = false
+enableMathNotation = false
+usePageBundles = false
+mainSections = ["posts"] 
+figurePositionShow = false 
+mobileNavigation = "right" 
+enforceLightMode = false
+enforceDarkMode = true
+titleSeparator = "-"
+numberOfRecentPosts = 6
+numberOfRelatedPosts = 6
+numberOfFeaturedPosts = 4
 toc = true
 
-# website author
+## Website author
 [author]
-name = "John Bowdre"
-photo = "images/bio-photo.jpg" #include this if you would like to show the author photo on the sidebar
+  name = "John Bowdre"
+  photo = "images/bio-photo.jpg" 
 
+## Comments
+comments = true
 [utterances]
   repo="jbowdre/virtuallypotato" # owner/repo where github comments will happen
   issueterm="title" # how will the issues be mapped to the articles
