switch to pagebundles by default, disable pagebundles on existing posts

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,7 +18,7 @@ numberOfTagsShown = 10
 codeMaxLines = 10
 codeLineNumbers = false
 enableMathNotation = false
-usePageBundles = false
+usePageBundles = true
 mainSections = ["posts"] 
 figurePositionShow = false 
 mobileNavigation = "right" 
