--- a/netlify.toml
+++ b/netlify.toml
@@ -7,5 +7,5 @@
 [context.production]
   command = "hugo"
 
-[context.deploy-preview]
+[context.branch-deploy]
   command = "hugo --environment staging"
