--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -35,7 +35,7 @@
 [[main]]
   parent = "Connect"
   name = "XMPP"
-  url = "https://conversations.im/i/john@chat.vpot8.ooo"
+  url = "https://conversations.im/i/john@chat.vpota.to"
 [[main]]
   parent = "Connect"
   name = "Twitter"
