add new 'timeless' parameter to suppress the old post warning

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -29,6 +29,7 @@ numberOfRecentPosts = 6
 numberOfRelatedPosts = 6
 numberOfFeaturedPosts = 4
 toc = true
+timeless = false
 
 ## Website author
 [author]
