switch to built-in search but placed in top nav intead of sidebar

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -30,6 +30,7 @@ numberOfRelatedPosts = 6
 numberOfFeaturedPosts = 4
 toc = true
 timeless = false
+enableSearch = true
 
 ## Website author
 [author]
