remove/fix local icons to default to theme icons

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -7,7 +7,7 @@ since = 2018
 
 ## Logos & icons
 fallBackOgImage = "logos/thumbnail.png"
-iconsDir = "images/icons/"
+iconsDir = "/icons/"
 centerLogo = false
 logo = "logos/logo.png"
 footerLogo = "logos/logo_footer.png"
