theme updates to 829f6816d4b82f5aa02b5740ec7899a746a99dfe

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,5 @@
-title = "Virtually Potato"  
+title = "Virtually Potato"
+baseurl = "https://virtuallypotato.com/"
 paginate = 15
 theme = ["hugo-cloak-email", "hugo-clarity"]
 enableEmoji = true
