deprecate matrix as a contact method, replace with session

--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -30,8 +30,8 @@
   weight = -100
 [[main]]
   parent = "Connect"
-  name = "Matrix"
-  url = "https://matrix.to/#/@john:bowdre.net"
+  name = "Session"
+  url = "/session/"
 [[main]]
   parent = "Connect"
   name = "XMPP"
