remove old contact links, insert new SimpleX link

--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -35,12 +35,8 @@
   weight = -100
 [[main]]
   parent = "Connect"
-  name = "Session"
-  url = "/session/"
-[[main]]
-  parent = "Connect"
-  name = "XMPP"
-  url = "/xmpp/"
+  name = "SimpleX Chat"
+  url = "https://go.vpota.to/simplex"
 [[main]]
   parent = "Connect"
   name = "GitHub"
