--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -33,8 +33,8 @@ enableSearch = true
 ## Comments
 comments = true
 utterances = true
-utterancesRepo = "jbowdre/virtuallypotato"
-utterancesIssueTerm = "title"
+utterancesRepo = "jbowdre/site-comments"
+utterancesIssueTerm = "og:title"
 utterancesTheme = "dark-blue"
 
 ## Website author
