fix baseurl for production deploys

--- a/config/production/config.toml
+++ b/config/production/config.toml
@@ -1,2 +1,2 @@
-baseurl = "https://www.virtuallypotato.com/"  # Include trailing slash
+baseurl = "https://virtuallypotato.com/"  # Include trailing slash
 
